@@ -18,3 +18,4 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 #include <Python.h>
 extern void hspy_decref(PyObject *o);
+extern PyObject ** hspy_getexc();
